# ir_metric

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/ir_metric/: __init__.py  metric.py
src/ir_metrices.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_average_precision.py  test_metric.py
