[tool.poetry]
name = "ir-metric"
version = "0.1.1"
description = ""
authors = ["harshkumarchourasia <harshkumarchourasia@gmail.com>"]
readme = "README.md"
repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/harshkumarchourasia/ir_metric"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
