[tool.poetry]
name = "ir-metric"
version = "0.1.3"
description = "ir_metrics is a Python package designed to facilitate information retrieval (IR) metric calculations. It provides a simple and convenient way to compute various metrics commonly used in IR evaluation."
authors = ["harshkumarchourasia <harshkumarchourasia@gmail.com>"]
readme = "README.md"
repository = "https://github.com/harshkumarchourasia/ir_metric"
homepage = "https://github.com/harshkumarchourasia/ir_metric"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
